--- a/style.css
+++ b/style.css
@@ -99,3 +99,17 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 10000;
   }
+
+.delete-button{
+ background-color: rgba(255, 0, 0, 0.274);
+ 
+ color: white;
+ border: none;
+ padding: 2px 5px;
+ border-radius: 50%;
+ cursor:pointer;
+ position:absolute;
+ z-index: 100;
+ /* top: -10px;
+ right: -10px; */
+}
