--- a/style.css
+++ b/style.css
@@ -210,7 +210,38 @@ table.summaryTable tfoot td {
 }
 
 
-
+.zoomSlider{
+  width:100%
+}
+.slider{
+  appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity .2s;
+}
+.slider:hover{
+  opacity:1;
+}
+.slider::-webkit-slider-thumb{
+  -webkit-appearance:none;
+  appearance: none;
+  width: 30px;
+  height: 25px;
+  border-radius: 50%;
+  background:#04AA6D;
+  cursor:pointer;
+}
+.slider::-moz-range-thumb {
+  width: 30px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  border-radius: 50%;
+  background: #04AA6D; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
 
 @media (max-width: 600px) {
   .summaryBox{
