--- a/style.css
+++ b/style.css
@@ -136,21 +136,28 @@ body {
 } */
 
 .delete-button{
- background-color: rgba(255, 0, 0, 0.274);
- 
- color: white;
- border: none;
- padding: 2px 5px;
- border-radius: 50%;
  cursor:pointer;
  grid-area: topRight;
- /* position:relative; */
- /* z-index: 100; */
- width:20px;
- height:20px;
- text-align: center;
- /* top: -10px;
- right: -10px; */
+ color:#fff !important;
+ background-color: red !important;
+}
+
+.options-button{
+ cursor:pointer;
+ grid-area: topLeft;
+ display: flex;
+ flex-direction: column;
+ /* color:#fff !important; */
+ /* background-color: red !important; */
+
+}
+.options-button span{
+  background: black;
+  border-radius: 10px;
+  border: 1px solid black;
+  height: 7px;
+  margin: 2px 0;
+  width: 14px;
 }
 
 .transition{
@@ -288,6 +295,77 @@ table.summaryTable tfoot td {
   }
 
 }
+
+.zoom-buttons{
+  position:relative;
+  display:flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  margin-top: 0.3rem;
+  
+}
+.zoom-value{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:3.5rem;
+  height:2rem;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin: 0 5px ;
+  background-color: #ececec;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #2c3e50;
+  font-family: 'Segoe UI';
+
+
+}
+.zoom-buttons button{
+  width:3rem;
+  height:2rem;
+  border: 1px solid rgb(200, 200, 200);
+  border-radius: 5px;
+  /* margin: 0 1px ; */
+  /* margin:0; */
+  background-color: #ececec;
+
+}
+
+.button {
+  align-items: center;
+  background: #FFFFFF;
+  border: 0 solid #E2E8F0;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  color: #1A202C;
+  display: inline-flex;
+  font-family: Inter, sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  height: 14px;
+  justify-content: center;
+  line-height: 14px;
+  overflow-wrap: break-word;
+  padding: 14px;
+  text-decoration: none;
+  width: auto;
+  border-radius: 8px;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  transform: scale(1);
+  transition: transform 0.1s ease-in-out;
+}
+.button:hover{
+  transform: scale(1.3);
+  transition: transform 0.2s ease-in-out;
+  /* padding: 16px; */
+}
+
+
 
 @media (max-width: 600px) {
   .summaryBox{
