--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
   position: absolute; 
   bottom: 50px; 
   left: 50px;
+  border-radius: 25px;
   /* border: 1px solid black;
   border-radius: 3px; */
   /* padding: 20px; */
@@ -186,12 +187,16 @@ text-align: start;
 }
 table.summaryTable {
   font-family: Georgia, serif;
-  border: 2px solid #1B1B1B;
+  border: 2px solid #5f5f5f;
+ 
   background-color: #C3C3C3;
   width: 350px;
   height: 200px;
   text-align: center;
   border-collapse: collapse;
+  box-shadow: 6px 24px 66px -25px rgba(0,0,0,0.35);
+  -webkit-box-shadow: 6px 24px 66px -25px rgba(0,0,0,0.35);
+  -moz-box-shadow: 6px 24px 66px -25px rgba(0,0,0,0.35);
 }
 table.summaryTable td, table.summaryTable th {
   border: 0px solid #FFFFFF;
@@ -365,6 +370,17 @@ table.summaryTable tfoot td {
   /* padding: 16px; */
 }
 
+
+/* Selection Highlighting */
+::-moz-selection{
+  background-color: transparent;
+  color:#000;
+
+}
+::selection{
+  background-color: transparent;
+  color:#000;
+}
 
 
 @media (max-width: 600px) {
