--- a/style.scss
+++ b/style.scss
@@ -1,22 +1,22 @@
-:root{
+:root {
   --baseHue: 190;
-  --gridColor: hsla(var(--baseHue),100%,50%,0.5);
+  --gridColor: hsla(var(--baseHue), 100%, 50%, 0.5);
   --grid-size: 1rem;
 }
 $baseHue: 190;
-$gridColor: hsla(var(--baseHue),100%,50%,0.5);
+$gridColor: hsla(var(--baseHue), 100%, 50%, 0.5);
 $grid-size: 1rem;
 
 body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    /* display: flex; */
-    /* justify-content: center;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /* display: flex; */
+  /* justify-content: center;
     align-items: center; */
-    /* height: 100vh; */
-    background-color: #b4b4b4;
-    /* background: #fff;
+  /* height: 100vh; */
+  background-color: #b4b4b4;
+  /* background: #fff;
     min-height: 100vh;
     background-image: 
       linear-gradient(0deg, var(--gridColor) 0%, transparent 1px), 
@@ -27,151 +27,149 @@ body {
       100% var(--grid-size), 
       var(-grid-size) 100%;
     transition: background-size 0.25s; */
-  }
-
-  #container {
-    position: absolute;
-    /* position: absolute; */
-    width: 100%;
-    height: 100%;
-    /* background-color: #4c4c4c; */
-    // border: 1px solid #ccc; 
-    z-index: 2;
-    pointer-events: none;
-  }
-
-  .drag-box {
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
-    background-color: #3498db;
-    position: absolute;
-    cursor: grab;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-weight: bold;
-    pointer-events: auto;
-  }
-
-  #lines {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-
-    /* pointer-events: stroke; */
-  }
-  #grid{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-  }
-  #polygon{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-  }
-
-  /* Style for the larger clickable lines */
-.clickable-line {
-    stroke: rgb(183, 209, 251); /*Make the line itself transparent*/
-    fill: transparent;
-    stroke-linecap: round;
-    pointer-events: stroke;
-    stroke-width: 5px; /* Increase the stroke width to expand the clickable area */
-    cursor: pointer; /* Change cursor to pointer to indicate interactivity */
-  }
-
-.line-text{
-    /* font-family: 'Open Sans', sans-serif; */
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
 }
 
-  .grid-dot{
-    fill: black;
-    opacity: 0.2;
-    /* r:2px; radius */
-  }
+#container {
+  position: absolute;
+  /* position: absolute; */
+  width: 100%;
+  height: 100%;
+  /* background-color: #4c4c4c; */
+  // border: 1px solid #ccc;
+  z-index: 2;
+  pointer-events: none;
+}
 
-.polygon{
-    fill: lightgrey;
+.drag-box {
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  background-color: #3498db;
+  position: absolute;
+  cursor: grab;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: bold;
+  pointer-events: auto;
+}
+
+#lines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+
+  /* pointer-events: stroke; */
+}
+#grid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+#polygon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+/* Style for the larger clickable lines */
+.clickable-line {
+  stroke: rgb(183, 209, 251); /*Make the line itself transparent*/
+  fill: transparent;
+  stroke-linecap: round;
+  pointer-events: stroke;
+  stroke-width: 5px; /* Increase the stroke width to expand the clickable area */
+  cursor: pointer; /* Change cursor to pointer to indicate interactivity */
+}
+
+.line-text {
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
+
+.grid-dot {
+  fill: black;
+  opacity: 0.2;
+  /* r:2px; radius */
+}
+
+.polygon {
+  fill: lightgrey;
 }
 
 .popup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 10000;
-  }
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10000;
+}
 
-.hoverInfo{
+.hoverInfo {
   position: absolute;
   display: inline-grid;
   grid-template-columns: 25px 50px 0px;
   grid-template-rows: 25px 50px 0px;
   grid-template-areas:
-      "topLeft top topRight"
-      "left center right"
-      "bottomLeft bottom bottomRight";
+    "topLeft top topRight"
+    "left center right"
+    "bottomLeft bottom bottomRight";
   width: 100px;
   height: 100px;
-  
-  &:hover{
+
+  &:hover {
     // border:5px dotted;
   }
-  
+
   /* border: 2px dashed #0B6FA4; */
 }
 
-.delete-button{
- cursor:pointer;
- grid-area: topRight;
- color:#fff !important;
- background-color: red !important;
+.delete-button {
+  cursor: pointer;
+  grid-area: topRight;
+  color: #fff !important;
+  background-color: red !important;
 }
 
-.options-button{
- cursor:pointer;
- grid-area: topLeft;
- display: flex;
- flex-direction: column;
- /* color:#fff !important; */
- /* background-color: red !important; */
- span{
-   background: black;
-   border-radius: 10px;
-   border: 1px solid black;
-   height: 7px;
-   margin: 2px 0;
-   width: 14px;
-
- }
-
+.options-button {
+  cursor: pointer;
+  grid-area: topLeft;
+  display: flex;
+  flex-direction: column;
+  /* color:#fff !important; */
+  /* background-color: red !important; */
+  span {
+    background: black;
+    border-radius: 10px;
+    border: 1px solid black;
+    height: 7px;
+    margin: 2px 0;
+    width: 14px;
+  }
 }
 
-.transition{
+.transition {
   transition: opacity 0.3s ease-in-out;
 }
 
-.summaryBox{
-  position: absolute; 
-  bottom: 50px; 
+.summaryBox {
+  position: absolute;
+  bottom: 50px;
   left: 50px;
   border-radius: 25px;
   /* border: 1px solid black;
@@ -179,66 +177,61 @@ body {
   /* padding: 20px; */
   /* margin: 60px 10px; */
   z-index: 102;
-  
+
   /* width: calc(100% - 40px);
   height: calc(100% - 40px); */
-  .summaryTable{
+  .summaryTable {
     font-family: Georgia, serif;
     border: 2px solid #5f5f5f;
-    
-    background-color: #C3C3C3;
+
+    background-color: #c3c3c3;
     width: 350px;
     height: 200px;
     text-align: center;
     border-collapse: collapse;
-    box-shadow: 6px 24px 66px -25px rgba(0,0,0,0.35);
-    -webkit-box-shadow: 6px 24px 66px -25px rgba(0,0,0,0.35);
-    -moz-box-shadow: 6px 24px 66px -25px rgba(0,0,0,0.35);
-    
-    th{
+    box-shadow: 6px 24px 66px -25px rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 6px 24px 66px -25px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 6px 24px 66px -25px rgba(0, 0, 0, 0.35);
+
+    th {
       text-align: start;
-    } 
-    tr{
+    }
+    tr {
       text-align: center;
     }
-    td, th{
-  
-      border: 0px solid #FFFFFF;
+    td,
+    th {
+      border: 0px solid #ffffff;
       padding: 3px 2px;
     }
-    td,tbody{
+    td,
+    tbody {
       font-size: 13px;
       font-weight: bold;
-  
     }
-    tr:nth-child(even){
+    tr:nth-child(even) {
       background: #8da1b2;
-  
     }
-    thead, th{
-      background: #0B6FA4;
+    thead,
+    th {
+      background: #0b6fa4;
       font-size: 17px;
       font-weight: bold;
-      color: #FFFFFF;
+      color: #ffffff;
       text-align: center;
-  
     }
-    tfoot{
+    tfoot {
       font-size: 14px;
       font-weight: bold;
       color: #333333;
-      background: #D0E4F5;
+      background: #d0e4f5;
       border-top: 3px solid #444444;
-      & td{
-  
+      & td {
         font-size: 14px;
       }
-  
     }
-    
   }
 }
-
 
 .angleCanvas {
   position: absolute;
@@ -249,15 +242,14 @@ body {
   z-index: 1;
 }
 
-
-.zoomSlider{
-  width:100%;
-  display:flex;
+.zoomSlider {
+  width: 100%;
+  display: flex;
   flex: row wrap;
   margin-top: 10px;
   padding: 5px;
 }
-.slider{
+.slider {
   appearance: none;
   width: 90%;
   height: 25px;
@@ -265,34 +257,30 @@ body {
   outline: none;
   opacity: 0.7;
   -webkit-transition: 0.2s;
-  transition: opacity .2s;
-  &:hover{
-
-    opacity:1;
+  transition: opacity 0.2s;
+  &:hover {
+    opacity: 1;
   }
 
-  &::-webkit-slider-thumb{
-    -webkit-appearance:none;
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
     appearance: none;
     width: 30px;
     height: 25px;
     border-radius: 50%;
-    background:#04AA6D;
-    cursor:pointer;
-
+    background: #04aa6d;
+    cursor: pointer;
   }
-  &::moz-range-thumb{
+  &::moz-range-thumb {
     width: 30px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
     border-radius: 50%;
-    background: #04AA6D; /* Green background */
+    background: #04aa6d; /* Green background */
     cursor: pointer; /* Cursor on hover */
-
   }
 }
 
-
-.zoomSliderValue{
+.zoomSliderValue {
   display: inline-block;
   position: relative;
   width: 60px;
@@ -303,64 +291,61 @@ body {
   background: #2c3e50;
   padding: 5px 10px;
   margin-left: 8px;
-  &::after{
+  &::after {
     position: absolute;
-    top:8px;
-    left:-7px;
+    top: 8px;
+    left: -7px;
     width: 0;
-    height:0;
+    height: 0;
     border-top: 7px solid transparent;
-    border-right: 7px solid #2c3e50 ;
+    border-right: 7px solid #2c3e50;
     border-bottom: 7px solid transparent;
-    content: '';
+    content: "";
   }
-
 }
 
-.zoom-buttons{
-  position:relative;
-  display:flex;
+.zoom-buttons {
+  position: relative;
+  display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: center;
   margin-top: 0.3rem;
-  button{
-    width:3rem;
-    height:2rem;
+  button {
+    width: 3rem;
+    height: 2rem;
     border: 1px solid rgb(200, 200, 200);
     border-radius: 5px;
     /* margin: 0 1px ; */
     /* margin:0; */
     background-color: #ececec;
-
   }
-  
 }
-.zoom-value{
+.zoom-value {
   display: flex;
   justify-content: center;
   align-items: center;
-  width:3.5rem;
-  height:2rem;
+  width: 3.5rem;
+  height: 2rem;
   border: 1px solid grey;
   border-radius: 5px;
-  margin: 0 5px ;
+  margin: 0 5px;
   background-color: #ececec;
   text-align: center;
   font-size: 0.9rem;
   color: #2c3e50;
-  font-family: 'Segoe UI';
-
-
+  font-family: "Segoe UI";
 }
 
 .button {
   align-items: center;
-  background: #FFFFFF;
-  border: 0 solid #E2E8F0;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  background: #ffffff;
+  border: 0 solid #e2e8f0;
+  box-shadow:
+    0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
-  color: #1A202C;
+  color: #1a202c;
   display: inline-flex;
   font-family: Inter, sans-serif;
   font-size: 1rem;
@@ -379,29 +364,26 @@ body {
   touch-action: manipulation;
   transform: scale(1);
   transition: transform 0.1s ease-in-out;
-  &:hover{
+  &:hover {
     transform: scale(1.3);
     transition: transform 0.2s ease-in-out;
     /* padding: 16px; */
-
   }
 }
 
 /* Selection Highlighting */
-::-moz-selection{
+::-moz-selection {
   background-color: transparent;
-  color:#000;
-
+  color: #000;
 }
-::selection{
+::selection {
   background-color: transparent;
-  color:#000;
+  color: #000;
 }
-
 
 @media (max-width: 600px) {
-  .summaryBox{
+  .summaryBox {
     bottom: 10px;
-    left:10px;
+    left: 10px;
   }
 }
