--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,14 @@
 :root {
-  --baseHue: 190;
-  --gridColor: hsla(var(--baseHue), 100%, 50%, 0.5);
-  --grid-size: 1rem;
+
 }
+
 $baseHue: 190;
-$gridColor: hsla(var(--baseHue), 100%, 50%, 0.5);
-$grid-size: 1rem;
+
+$grid-size: 6rem;
+$backgroundColor: #5f6c96;
+$gridColor: #dfe4f6;
+$polygonColor: #4e86bdb8;
+$lineColor: rgba(234, 234, 234, 0.89);
 
 body {
   margin: 0;
@@ -15,18 +18,18 @@ body {
   /* justify-content: center;
     align-items: center; */
   /* height: 100vh; */
-  background-color: #b4b4b4;
-  /* background: #fff;
-    min-height: 100vh;
-    background-image: 
-      linear-gradient(0deg, var(--gridColor) 0%, transparent 1px), 
-      linear-gradient(90deg, var(--gridColor) 0%, transparent 1px);
-    background-position: center;
-    background-size: 100% 1rem;
-    background-size: 
-      100% var(--grid-size), 
-      var(-grid-size) 100%;
-    transition: background-size 0.25s; */
+  background-color: $backgroundColor;
+  background: $backgroundColor;
+  min-height: 100vh;
+  background-image: 
+    linear-gradient(0deg, $gridColor 0%, transparent 1px), 
+    linear-gradient(90deg, $gridColor 0%, transparent 1px);
+  background-position: center;
+  background-size: 100% 1rem;
+  background-size: 
+    100% $grid-size, 
+    $grid-size 100%;
+  transition: background-size 0.25s;
 }
 
 #container {
@@ -38,6 +41,7 @@ body {
   // border: 1px solid #ccc;
   z-index: 2;
   pointer-events: none;
+  transition: transform 0.25s;
 }
 
 .drag-box {
@@ -62,7 +66,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 1;
-
+  // transition: all 0.25s;
   /* pointer-events: stroke; */
 }
 #grid {
@@ -84,7 +88,7 @@ body {
 
 /* Style for the larger clickable lines */
 .clickable-line {
-  stroke: rgb(183, 209, 251); /*Make the line itself transparent*/
+  stroke: $lineColor; /*Make the line itself transparent*/
   fill: transparent;
   stroke-linecap: round;
   pointer-events: stroke;
@@ -100,12 +104,13 @@ body {
 
 .grid-dot {
   fill: black;
-  opacity: 0.2;
+  // opacity: 0.2;
+  // opacity: 1;
   /* r:2px; radius */
 }
 
 .polygon {
-  fill: lightgrey;
+  fill: $polygonColor;
 }
 
 .popup {
